<resources>
    <string name="app_name">SimpleTodo</string>

    <string name="confirm">Confirm</string>


    <string name="note_name">Note Name</string>
    <string name="due_date">Due Date</string>
    <string name="note_content">Note Content</string>
    <string name="note_priority">Priority Level</string>
    <string name="note_status">Status</string>

    <string name="note_add_hint">Add Note</string>
</resources>
