<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:padding="@dimen/edit_note_padding">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/confirm">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/gap_2x">

                <RelativeLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/gap_1x">

                    <LinearLayout
                        android:id="@+id/note_edit_subject_layout"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/note_name"/>

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <EditText
                                android:id="@+id/note_edit_subject"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"/>

                        </android.support.design.widget.TextInputLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/note_edit_date_picker_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_below="@id/note_edit_subject_layout">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/due_date"/>

                        <DatePicker
                            android:id="@+id/note_edit_date_picker"
                            style="@android:style/Widget.Holo.DatePicker"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:calendarViewShown="false">
                        </DatePicker>

                    </LinearLayout>



                    <LinearLayout
                        android:id="@+id/note_edit_content_layout"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_below="@+id/note_edit_date_picker_layout">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/note_content"/>

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <EditText
                                android:id="@+id/note_edit_content"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"/>

                        </android.support.design.widget.TextInputLayout>
                    </LinearLayout>

                    <RelativeLayout
                        android:id="@+id/note_edit_priority_layout"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_below="@id/note_edit_content_layout">

                        <TextView
                            android:id="@+id/note_edit_priority_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/note_priority"
                            android:layout_alignBottom="@+id/note_edit_priority"/>

                        <Spinner
                            android:id="@+id/note_edit_priority"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_toRightOf="@+id/note_edit_priority_title"
                            android:layout_toEndOf="@+id/note_edit_priority_title"
                            android:layout_marginTop="@dimen/gap_1x"
                            android:layout_marginBottom="@dimen/gap_1x"/>

                        <TextView
                            android:id="@+id/note_edit_status_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/note_status"
                            android:layout_alignBottom="@+id/note_edit_status"/>

                        <Spinner
                            android:id="@+id/note_edit_status"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignLeft="@+id/note_edit_priority"
                            android:layout_below="@+id/note_edit_priority"
                            android:layout_marginTop="@dimen/gap_1x"
                            android:layout_marginBottom="@dimen/gap_1x"/>

                    </RelativeLayout>

                </RelativeLayout>
            </android.support.v7.widget.CardView>
        </FrameLayout>
    </ScrollView>

    <Button
        android:id="@+id/confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirm"
        android:textColor="@color/white"
        android:enabled="false"
        android:background="@drawable/background_primary_rect"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>